--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ UnityProject_EasterGameJam/UserSettings/EditorUserSettings.asset
 UnityProject_EasterGameJam/ProjectSettings/TagManager.asset
 UnityProject_EasterGameJam/ProjectSettings/Packages/com.unity.probuilder/Settings.json
 UnityProject_EasterGameJam/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+UnityProject_EasterGameJam/UserSettings/EditorUserSettings.asset
+UnityProject_EasterGameJam/ProjectSettings/URPProjectSettings.asset
+UnityProject_EasterGameJam/UserSettings/EditorUserSettings.asset
